prototype logging in with cookie

--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "js-cookie": "^2.2.0",
     "office-ui-fabric-react": "^6.153.0",
     "react": "^16.8.4",
-    "react-cookie": "^3.0.8",
     "react-dom": "^16.8.4",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
