--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
     "react-router-dom": "^4.3.1",
     "react-router-transition": "^1.3.0",
     "react-scripts": "2.1.8",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
