--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "immutable": "^4.0.0-rc.12",
     "js-cookie": "^2.2.0",
     "office-ui-fabric-react": "^6.153.0",
     "react": "^16.8.4",
@@ -11,6 +12,8 @@
     "react-router-dom": "^4.3.1",
     "react-router-transition": "^1.3.0",
     "react-scripts": "2.1.8",
+    "slate": "^0.44.12",
+    "slate-react": "^0.21.18",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0"
   },
