--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "office-ui-fabric-react": "^6.153.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-emotion": "^10.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-router-transition": "^1.3.0",
@@ -16,6 +17,7 @@
     "slate-react": "^0.21.18",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
+    "styled-components": "^4.1.3",
     "time-ago": "^0.2.1"
   },
   "scripts": {
